<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="my.messenger.androidclient.ui.CreateAccountActivity">
    <ScrollView
        android:id="@+id/create_account_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_account_create_account_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/create_account_lblUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Username" />

                <EditText
                    android:id="@+id/create_account_txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/create_account_lblBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BirthDate" />

            <EditText
                    android:id="@+id/create_account_txtBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/create_account_lblPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/create_account_txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

            <Button
                android:id="@+id/create_account_create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="createAccountOnClick"
                android:text="@string/create_account" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
