<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="my.messenger.androidclient.ui.AddContactActivity">

    <LinearLayout
        android:id="@+id/contact_add_contact_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/contact_add_contact_inputsearch"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:hint="@string/contact_add_contact_search"
            android:inputType="text" />

        <Button
            android:id="@+id/contact_add_contact_btnsearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:onClick="btnsearchClick"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/contact_add_contact_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_below="@+id/contact_add_contact_layout_header"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/contact_add_contact_results_form"
        android:layout_width="match_parent"
        android:layout_below="@+id/contact_add_contact_layout_header"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contact_add_contact_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Username" />

            <TextView
                android:id="@+id/contact_add_contact_txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BirthDate" />

            <TextView
                android:id="@+id/contact_add_contact_txtBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />

            <LinearLayout
                android:id="@+id/contact_add_contact_layout_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/contact_add_contact_btnAddContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact_add_contact_add_contact"
                    android:onClick="btnAddContactClick"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact_add_contact_cancel"
                    android:onClick="btnAddCancelClick"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
