<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="my.messenger.androidclient.ui.GroupDetailsActivity">

    <ProgressBar
        android:id="@+id/activity_group_details_progressBar_pgLoadingGroup"
        style="?android:attr/progressBarStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/activity_group_details_form">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView6"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_gravity="left|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_group_details_lblGroupName" />
            <TextView
                android:id="@+id/activity_group_details_lblGroupName"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="left|top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-" />

            <TextView
                android:id="@+id/textView4"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_gravity="left|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_group_details_lblOwner" />
            <TextView
                android:id="@+id/activity_group_details_lblOwner"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="left|top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-" />

            <TextView
                android:id="@+id/textView2"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_gravity="left|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_group_details_lblNMembers" />
            <TextView
                android:id="@+id/activity_group_details_lblNMembers"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_gravity="left|top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-" />

        </GridLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/activity_group_details_lstMembers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_group_details_form"
        />

</RelativeLayout>
